--- a/packages/pixel-patrol-loader-bio/pyproject.toml
+++ b/packages/pixel-patrol-loader-bio/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "bioio-imageio==1.3.0",
     "pixel-patrol-base>=0.1.0",
     "zarr>=3.1.1",
+    "tifffile==2025.9.9",
 ]
 
 [tool.uv]
