--- a/packages/pixel-patrol-loader-bio/pyproject.toml
+++ b/packages/pixel-patrol-loader-bio/pyproject.toml
@@ -1,16 +1,16 @@
 [project]
 name = "pixel-patrol-loader-bio"
-version = "0.1.1"
+version = "0.1.2"
 description = "PixelPatrol add-on package for loading images with bioio and zarr"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
-    "bioio>=3.0.0",
-    "bioio-tifffile>=1.3.0",
-    "bioio-ome-tiff>=1.3.0",
+    "bioio==3.0.0",
+    "bioio-tifffile==1.3.0",
+    "bioio-ome-tiff==1.4.0",
     "bioio-ome-zarr==2.3.0",
     "bioio-imageio==1.3.0",
-    "pixel-patrol-base>=0.1.1",
+    "pixel-patrol-base==0.1.2",
     "zarr==3.1.1",
     "tifffile==2025.9.9",
 ]
